--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     font-family: "Raleway", sans-serif;
     margin: 0%;
     max-width: 100vw;
+    color: #505050;
 }
 :root {
     --primary-color: #fd8f45;
