--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Raleway", sans-serif;
+    font-family: "Manrope", sans-serif;
     margin: 0%;
     max-width: 100vw;
     color: #505050;
